--- a/build
+++ b/build
@@ -1,13 +1,19 @@
 #! /usr/bin/env nix-shell
 #! nix-shell --pure -i bash
-
 set -e
+
+
 cargo run
+
 
 cp res/style/{source.css,tmp}
 runhaskell downscale.hs 80 140 >> res/style/tmp
-lightningcss --minify --bundle --targets '> 0%' --output-file res/style/{minified.css,tmp}
+
+#lightningcss --minify --bundle --targets '> 0%' --output-file res/style/{minified.css,tmp}
+cp res/style/{tmp,minified.css}
+
 rm res/style/tmp
+
 
 rm -rf res/images/low_res
 mkdir res/images/low_res
